# pet_xiaoxinzi

./: .gitignore  BUILD.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: release-v0.1.0.md
.github/workflows/: build.yml  publish-installers.yml  release.yml
codex-pet/: README.md  pet_request.json
codex-pet/installed/: pet.json
codex-pet/qa/: review.json  run-summary.json  validation.json
installers/: README.md
installers/v0.1.0/: SHA256SUMS.txt
public/assets/: metadata.json  skins.json
public/assets/skins/aqua/: metadata.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-app-commands.toml
src-tauri/src/: lib.rs  main.rs
