[package]
name = "pet-xiaoxinzi"
version = "0.1.0"
description = "A lightweight high-resolution desktop pet"
authors = ["haoranyang"]
edition = "2021"

[lib]
name = "pet_xiaoxinzi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
